--- a/DNASystemBackend/appsettings.json
+++ b/DNASystemBackend/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DNASystemDb": "Server=localhost;Database=DNASystem;User Id=sa;Password=12345;TrustServerCertificate=True;"
+        "DNASystemDb": "Server=localhost;Database=DNASystem;User Id=sa;Password=1234567890;TrustServerCertificate=True;"
     },
     "Jwt": {
         "Key": "i_am_a_scudleto_formularone_driver_ferrari_charlec_leclerc",
